// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can create a foreign key constraint with action options 1`] = `
Object {
  "created_at": "[DATE]",
  "database_id": "[ID]",
  "delete_action": "c",
  "description": null,
  "field_ids": "[UUIDs-1]",
  "id": "[ID]",
  "name": "posts_author_id_fkey",
  "ref_field_ids": "[UUIDs-1]",
  "ref_table_id": "[ID]",
  "smart_tags": null,
  "table_id": "[ID]",
  "type": "f",
  "update_action": "r",
  "updated_at": "[DATE]",
}
`;

exports[`can create a foreign key constraint with no action 1`] = `
Object {
  "created_at": "[DATE]",
  "database_id": "[ID]",
  "delete_action": "a",
  "description": null,
  "field_ids": "[UUIDs-1]",
  "id": "[ID]",
  "name": "posts_author_id_fkey",
  "ref_field_ids": "[UUIDs-1]",
  "ref_table_id": "[ID]",
  "smart_tags": null,
  "table_id": "[ID]",
  "type": "f",
  "update_action": "a",
  "updated_at": "[DATE]",
}
`;

exports[`can create a multi foreign constraint 1`] = `
Object {
  "created_at": "[DATE]",
  "database_id": "[ID]",
  "delete_action": "c",
  "description": null,
  "field_ids": "[UUIDs-2]",
  "id": "[ID]",
  "name": "posts_id_reference_fkey",
  "ref_field_ids": "[UUIDs-2]",
  "ref_table_id": "[ID]",
  "smart_tags": null,
  "table_id": "[ID]",
  "type": "f",
  "update_action": "r",
  "updated_at": "[DATE]",
}
`;

exports[`can create a multi primary key constraint 1`] = `
Object {
  "created_at": "[DATE]",
  "database_id": "[ID]",
  "field_ids": "[UUIDs-2]",
  "id": "[ID]",
  "name": "posts_pkey",
  "table_id": "[ID]",
  "type": "p",
  "updated_at": "[DATE]",
}
`;

exports[`can create a multi unique constraint 1`] = `
Object {
  "created_at": "[DATE]",
  "database_id": "[ID]",
  "description": null,
  "field_ids": "[UUIDs-2]",
  "id": "[ID]",
  "name": "posts_id_author_id_key",
  "smart_tags": null,
  "table_id": "[ID]",
  "type": "u",
  "updated_at": "[DATE]",
}
`;

exports[`can create a primary key constraint 1`] = `
Object {
  "created_at": "[DATE]",
  "database_id": "[ID]",
  "field_ids": "[UUIDs-1]",
  "id": "[ID]",
  "name": "users_pkey",
  "table_id": "[ID]",
  "type": "p",
  "updated_at": "[DATE]",
}
`;

exports[`can create a unique constraint 1`] = `
Object {
  "created_at": "[DATE]",
  "database_id": "[ID]",
  "description": null,
  "field_ids": "[UUIDs-1]",
  "id": "[ID]",
  "name": "users_username_key",
  "smart_tags": null,
  "table_id": "[ID]",
  "type": "u",
  "updated_at": "[DATE]",
}
`;
